# mail-otp-autofill

./: .gitignore  LICENSE  PRIVACY.md  README.md
.github/workflows/: build-installer.yml
extension/: background.js  manifest.json  options.html  options.js  otp-detect.js  popup.html  popup.js  toast.js  webmail-poller.js
installer/: mail-otp-autofill.iss
native-app/: Cargo.toml  install-windows.ps1
native-app/src/: bridge.rs  config.rs  daemon.rs  gui.rs  ipc.rs  lib.rs  mailwatch.rs  main.rs  notify.rs  otp.rs
