[package]
name = "otp-relay"
version = "0.3.0"
edition = "2021"
description = "Local native-messaging host that watches IMAP mailboxes (IDLE) and pushes verification codes to the Mail OTP Autofill browser extension, plus a GUI account manager."

[dependencies]
imap = "2.4"
native-tls = "0.2"
mail-parser = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "2"
rpassword = "7"
dirs = "5"
eframe = "0.29"
interprocess = "2"
arboard = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Media_Audio", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[lib]
name = "otp_relay"
path = "src/lib.rs"

[[bin]]
name = "otp-relay"
path = "src/main.rs"

[[bin]]
name = "otp-relay-gui"
path = "src/gui.rs"

[[bin]]
name = "otp-relay-daemon"
path = "src/daemon.rs"

[[bin]]
name = "otp-relay-bridge"
path = "src/bridge.rs"

[[bin]]
name = "otp-relay-notify"
path = "src/notify.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true
